<resources>
    <string name="app_name">SmartNews</string>
    <string name="STR_ABOUT_HEADER">Hinweis</string>
    <string name="STR_ABOUT_TEXT"><![CDATA[
Die Beefeed-App ist ein von der Google Digital News Intiative gefördertes Pilotprojekt.\n
 \n
Mit Download der App nehmen Sie an diesem Projekt teil, wofür wir jetzt schon herzlich danken.\n
Bitte beachten Sie folgende Hinweise:\n
\n
- Benutzerführung, Design und Verhalten der App sind zugunsten des Testszenarios nicht optimiert worden, bitte haben Sie hier Nachsicht. Dass sich die Datenschutzerklärung nicht "wegklicken" läßt, ist diesem Umstand beispielsweise geschuldet.\n
\n
- im Pilotprojekt testen wir nur die Interaktion mit Benachrichtigungen. Die App hält entsprechend die schon versendeten Artikel nicht vorrätig.\n
\n
- Nachrichten, die älter als 12 Stunden sind, werden nicht mehr zugestellt, es werden dann nur die Datenschutzbestimmungen angezeigt, keine Nachrichten.\n
\n
- es handelt sich nicht um eine News-App im klassischen Sinne, die zur Information des Lesers beitragen will. Vielmehr testen wir in den nächsten vier bis acht Wochen, wie mit Hilfe von intelligenten Benachrichtigungen die Interaktion des Lesers mit mobilen Nachrichten gesteigert werden kann.\n
\n
Unter allen Teilnehmern verlosen wir ein iPad oder ein gleichwertiges Android-Tablet, je nach Präferenz des Gewinners. Alle Daten werden anonym erhoben und ausgewertet!\n
\n
]]></string>
    <string name="STR_PRIVACY_POLICY_HEADER">Datenschutzerklärung</string>
    <string name="STR_DEBUG_SCREEN">Debug Screen</string>
    <string name="STR_DEBUG_TEXT_NEWS">Test News(Text)</string>
    <string name="STR_DEBUG_PICTURE_NEWS">Test News(Picture)</string>
    <string name="STR_DEBUG_VIDEO_NEWS">Test News(Video)</string>
    <string name="STR_REGISTRATION_HEADER_TEXT_VIEW_TEXT">Registrierung</string>
    <string name="STR_REGISTRATION_SUB_HEADER_TEXT_VIEW_TEXT">
<![CDATA[
Liebe Nutzerin und lieber Nutzer,\n
\n
herzlichen Dank für Ihre Teilnahme an unserem News-Projekt Beefeed. Unter allen Teilnehmern verlosen wir ein iPad Pro. Um an der Verlosung teilzunehmen, bitten wir Sie um Angabe Ihres Alters und Ihrer Emailadresse. Beide Daten werden selbstverständlich vertraulich behandelt! Die Datenerhebung in der App erfolgt getrennt von der hier abgefragten Emailadresse, sodass eine anonyme Auswertung gewährleistet ist.\n
\n
Bei unserer App handelt es sich um ein Testprojekt, zur besseren Analyse der Ergebnisse hilft es uns, wenn Sie uns Ihren Berufsstand angeben. Alle Angaben sind freiwillig.\n
\n
Haben Sie Fragen oder weitergehendes Interesse an diesem Projekt? Dann freuen wir uns über eine Email an info@mms.hn. Vielen Dank für Ihre Unterstützung,\n
\n
Ihr Beefeed-News-Team.\n
]]>
    </string>
    <string name="STR_REGISTRATION_EMAIL_ADDRESS_EDIT_TEXT_HINT">E-Mail Adresse</string>
    <string name="STR_REGISTRATION_AGE_EDIT_TEXT_HINT">Alter</string>
    <string name="STR_REGISTRATION_REGISTER_BUTTON_TEXT">Registrieren</string>
    <string name="STR_REGISTRATION_ACCEPT_TERMS_OF_USE">Ich akzeptiere die Nutzungsbedingugen</string>
    <string name="STR_START_STOP_USER_SIMULATION">dbg! Start/Stop user simulation</string>
    <string name="STR_START_STOP_NEWS_SIMULATION">dbg! Start/Stop news simulation</string>
    <string name="STR_START_STOP_TURBO_POLLING">dbg! Start/Stop TurboPolling</string>
    <string name="STR_START_CHANGE_ALGORITHM">dbg! Change Algorithm</string>
    <string name="label_job">Tätigkeit</string>
</resources>